# icantbelieveitsnotsql

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md
example/sqlite/: butter.toml  schema.sql  smoke_test.py
example/sqlite/queries/: main.sql
sql/: llm-generated-generic.sql  llm-generated-mysql.sql  llm-generated-postgresql.sql
src/: config.rs  main.rs  query.rs  schema.rs  util.rs
src/codegen/: python.rs
