[package]
name = "icantbelieveitsnotsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlparser = "0.59.0"
thiserror = "2.0.17"
toml = "0.9.8"
